[package]
name = "rsille"
version = "3.0.0"
edition = "2021"
authors = ["nidhoggfgg <nidhoggfgg@gmail.com>"]
description = "A full feature braille code art lib"
keywords = ["braille", "terminal", "tui", "cli", "animation"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/nidhoggfgg/rsille.git"
exclude = ["examples", "imgs", "pyrsille"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canvas = { path = "./canvas" }
tui = { path = "./tui" }
tokio = { version = "1", features = ["full"] }
rayon = "1.10.0"
log = { version = "0.4", features = ["std"], optional = true }
env_logger = { version = "0.11.6", optional = true }
unicode-width = "0.2.0"

[profile.release]
lto = true
# debug = true # only used for perf

[dev-dependencies]
criterion = "0.4"

[features]
log = ["dep:log", "dep:env_logger", "tui/log"]
default = ["log"]

[workspace]
members = ["anime", "canvas", "pyrsille", "term", "tui"]
