[package]
name = "canvas"
version = "0.1.0"
edition = "2021"
exclude = ["examples"]

[dependencies]
ui = { path = "../ui" }
term = { path = "../term" }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[features]
default = ["color"]
color = []

[[bench]]
name = "vec_vs_map"
harness = false

[[bench]]
name = "u8_vs_u32"
harness = false

[[bench]]
name = "line"
harness = false
