[package]
name = "examples"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
rsille = { path = "../" }

[[example]]
name = "basic_text"
path = "basic_text.rs"

[[example]]
name = "vivid_text"
path = "vivid_text.rs"

[[example]]
name = "basic_canvas"
path = "basic_canvas.rs"

[[example]]
name = "boxed"
path = "boxed.rs"