[package]
name = "rsille_example"
version = "0.1.0"
edition = "2024"

[dependencies]
rsille = { path = "../" }

[[example]]
name = "basic_text"
path = "basic_text.rs"

[[example]]
name = "vivid_text"
path = "vivid_text.rs"

[[example]]
name = "basic_canvas"
path = "basic_canvas.rs"

[[example]]
name = "boxed"
path = "boxed.rs"

[[example]]
name = "simple_grid"
path = "simple_grid.rs"