[package]
name = "rsille"
version = "3.0.0"
edition = "2021"
authors = ["nidhoggfgg <nidhoggfgg@gmail.com>"]
description = "A full feature braille code art lib"
keywords = ["braille", "terminal", "tui", "cli", "animation"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/nidhoggfgg/rsille.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canvas = { path = "../packages/canvas" }
tui = { path = "../packages/tui" }
render = { path = "../packages/render" }
term = { path = "../packages/term" }
tokio = { version = "1", features = ["full"] }
rayon = "1.10.0"
log = { version = "0.4", features = ["std"], optional = true }
env_logger = { version = "0.11.6", optional = true }
unicode-width = "0.2.0"

[dev-dependencies]
criterion = "0.4"

[features]
log = ["dep:log", "dep:env_logger", "render/log"]
default = ["log"]
