[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.84"
tokio = { version = "1", features = ["full"] }
term = { path = "../term" }
log = { version = "0.4", features = ["std"], optional = true }
rayon = "1.10.0"
futures = "0.3.31"

[features]
log = ["dep:log"]
